--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -10,9 +11,11 @@
     "axios": "1.10.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-redux": "^9.0.1",
     "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
     "react-toastify": "8.0.2",
+    "redux": "^5.0.1",
     "sass": "^1.89.0",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
